# internal/Pet/petController/pet_controller.go
@@ -16,6 +16,15 @@ func NewPetController(service petService.PetService) *Petcontroller {
 	return &Petcontroller{service: service}
 }
 
+// AddPet @Summary Add a new pet to the store
+// @Description get string by ID
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param pet body models.Pet true "Pet object"
+// @Success 200 {string} string "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet [post]
 func (c *Petcontroller) AddPet(w http.ResponseWriter, r *http.Request) {
 	// извлекаем токен из заголовка Authorization
 	Usertoken := strings.TrimPrefix(r.Header.Get("Authorization"), "Bearer ")
@@ -34,6 +43,15 @@ func (c *Petcontroller) AddPet(w http.ResponseWriter, r *http.Request) {
 	responder.HandleSuccess(w, nil)
 }
 
+// UpdatePet @Summary Update an existing pet
+// @Description get string by ID
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param pet body models.Pet true "Pet object"
+// @Success 200 {string} string "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet [put]
 func (c *Petcontroller) UpdatePet(w http.ResponseWriter, r *http.Request) {
 	var pet models.Pet
 	err := json.NewDecoder(r.Body).Decode(&pet)
@@ -49,6 +67,15 @@ func (c *Petcontroller) UpdatePet(w http.ResponseWriter, r *http.Request) {
 	responder.HandleSuccess(w, nil)
 }
 
+// FindByStatus @Summary Finds Pets by status
+// @Description Only one status for request
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param status query string true "Status values that need to be considered for filter"
+// @Success 200 {object} []models.Pet "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet/findByStatus [get]
 func (c *Petcontroller) FindByStatus(w http.ResponseWriter, r *http.Request) {
 	status := chi.URLParam(r, "status")
 
@@ -60,6 +87,15 @@ func (c *Petcontroller) FindByStatus(w http.ResponseWriter, r *http.Request) {
 	responder.HandleSuccess(w, pets)
 }
 
+// GetPet @Summary Find pet by ID
+// @Description Returns a single pet
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param petId path int true "ID of pet"
+// @Success 200 {object} models.Pet "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet/{petId} [get]
 func (c *Petcontroller) GetPet(w http.ResponseWriter, r *http.Request) {
 	petId := chi.URLParam(r, "petId")
 	ID, err := strconv.Atoi(petId)
@@ -75,6 +111,17 @@ func (c *Petcontroller) GetPet(w http.ResponseWriter, r *http.Request) {
 	responder.HandleSuccess(w, pet)
 }
 
+// ChangePet @Summary Change pet
+// @Description Change pet
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param petId path int true "ID of pet"
+// @Param name query string false "Name of pet"
+// @Param status query string false "Status of pet"
+// @Success 200 {string} string "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet/{petId} [post]
 func (c *Petcontroller) ChangePet(w http.ResponseWriter, r *http.Request) {
 	petId := chi.URLParam(r, "petId")
 	ID, err := strconv.Atoi(petId)
@@ -92,6 +139,15 @@ func (c *Petcontroller) ChangePet(w http.ResponseWriter, r *http.Request) {
 	responder.HandleSuccess(w, nil)
 }
 
+// DeletePet @Summary Delete pet
+// @Description Delete pet
+// @Tags Pet
+// @Accept  json
+// @Produce  json
+// @Param petId path int true "ID of pet"
+// @Success 200 {string} string "ok"
+// @Failure 400 {string} string "bad request"
+// @Router /pet/pet/{petId} [delete]
 func (c *Petcontroller) DeletePet(w http.ResponseWriter, r *http.Request) {
 	petId := chi.URLParam(r, "petId")
 	ID, err := strconv.Atoi(petId)
